--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
          - '5000:5000'
         environment:
           #MYSQL_ROOT_PASSWORD: root
+          FLASK_APP : hello.py
           DB_USER: user
           DB_PASSWORD: password
           DB_HOST: mysql # name of the mysql service as set in the docker-compose file
